Restore full-width navbar strip while keeping nav overflow fixes

--- a/static/style.css
+++ b/static/style.css
@@ -6671,10 +6671,10 @@ button.loading::after {
 
 /* Final nav layout overrides */
 nav.site-nav {
-  width: 100%;
-  max-width: 100%;
-  margin-left: 0;
-  margin-right: 0;
+  width: 100vw;
+  max-width: 100vw;
+  margin-left: calc(50% - 50vw);
+  margin-right: calc(50% - 50vw);
   box-sizing: border-box;
   display: grid;
   grid-template-columns: auto minmax(0, 1fr) auto;
